<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/registerEmail"
        android:autofillHints=""
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/registerPassword"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/registerConfirmPassword"
        android:autofillHints=""
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnRegister"
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnGoToLogin"
        android:text="@string/go_to_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>